--- a/To-do-list-App.html
+++ b/To-do-list-App.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list App Js</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
@@ -53,6 +55,10 @@
             text-decoration: line-through;
             color: red;
         }
+        button{
+            padding: 10px;
+            border-radius: 6px;
+        }
 
     </style>
 </head>
@@ -61,7 +67,7 @@
         <h1>TO-do List App</h1>
         <div class="input-container">
             <input type="text" id="taskInput" placeholder="Add a New task.......">
-            <button onclick="addTask()">Add</button>
+            <button onclick="addTask()"><i class="fa-solid fa-plus"></i></button>
         </div>
         <ul id="taskList"></ul>
     </div>
@@ -78,9 +84,9 @@
             const li=document.createElement('li');
             li.innerHTML=`
                           <span>${taskText}</span>
-                          <button onclick="toggleTaskCompleted(this)">Done</button>
-                          <button onclick="editTask(this)">Edit</button>
-                          <button onclick="deleteTask(this)">Delete</button>`;
+                          <button onclick="toggleTaskCompleted(this)">Done   <i class="fa-solid fa-check"></i> </button>
+                          <button onclick="editTask(this)">Edit <i class="fa-solid fa-pen-to-square"></i></button>
+                          <button onclick="deleteTask(this)">Delete <i class="fa-solid fa-trash"></i></button>`;
 
 
             taskList.appendChild(li);
